Form is now properly aligned. Pathing for all blog post html pages should now be correct.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,6 +16,13 @@ body a {
     text-decoration: none;
     color: #bfc0c0ff;
 }
+p{
+    font-family: "Noto Sans", sans-serif;
+    font-size: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+}
 /* Main header that will sit at the top of page at all times. */
 .main-header {
    width: 100%;
@@ -96,49 +103,16 @@ main {
 /*Blog page styling finishes here*/
 
 /*Contact page styling starts here*/
-.flip-card {
+.contactForm label {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    width: 200px;
-    height: 200px;
+    padding-bottom: 2%;
+    padding-top: 2%;
 }
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    -webkit-transition: transform 0.8s;
-    transform-style: preserve-3d;
+.contactForm {
+    display: flex;
+    flex-direction: column;
 }
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
-  }
-  .flip-card-front {
-    background-color: transparent;
-    color: black;
-  }
-  .flip-card-back {
-    color: white;
-    transform: rotateY(180deg);
-  }
-p{
-    font-family: "Noto Sans", sans-serif;
-    font-size: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-
-}
-
 /*Footer styling starts her */
 footer {
     background-color: #403F4C;
